Modifiche per Tere

--- a/site/index.html
+++ b/site/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Hello Coursera!</title>
+	<title>Ciao Tere!</title>
 	</head>
 	<body>
-		<h1>Poppi ti amo!</h1>
-		<h2>Mi piaciono molto i tuoi piedini</h2>
+		<h2>sto smanettando con il mio primo repository e coi comandi di Git :)</h2>
+		<h3>spero che stia bene, ci sentiamo domani! Buona serata</h3>
 	</body>
 	</html>
