--- a/site/index.html
+++ b/site/index.html
@@ -5,6 +5,6 @@
 	</head>
 	<body>
 		<h2>sto smanettando con il mio primo repository e coi comandi di Git :)</h2>
-		<h3>spero che stia bene, ci sentiamo domani! Buona serata</h3>
+		<h3>xxxxx</h3>
 	</body>
 	</html>
