--- a/site/index.html
+++ b/site/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Ciao Tere!</title>
+	<title>Test Giulia Titolo </title>
 	</head>
 	<body>
-		<h2>sto smanettando con il mio primo repository e coi comandi di Git :)</h2>
-		<h3>xxxxx</h3>
+		<h2>questo è un testo h2</h2>
+		<h3>questo è un testo h3</h3>
 	</body>
 	</html>
