--- a/site/index.html
+++ b/site/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>Anatomy of a CSS Rule</title>
+<title>Anatomy of a CSS Rule giulia</title>
 <style>
 p {
   color: blue;
